[package]
name = "tiled"
version = "0.1.0"
authors = ["alventoor <julienm99@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.21", features = ["serialize"] }

[dev-dependencies]
serde_test = "1.0"